# paper_poster_harness

./: .gitignore  README.md  pyproject.toml
docs/: account_auth.md  paper2poster_lessons.md  prompt_contract.md  quality_policy.md
examples/: config.chatgpt-account.yaml
poster_harness/: __init__.py  account_auth.py  arxiv.py  assets.py  auth_login.py  cli.py  config.py  extract.py  flowchart_rewrite.py  fonts.py  image_backend.py  latex_utils.py  layout_contract.py  llm.py  llm_stages.py  micro_repair.py  models.py  prompt.py  replace.py  schemas.py
templates/: poster_harness_config.yaml
tests/: test_account_auth.py  test_arxiv_security.py  test_auth_login.py  test_config_modes.py  test_flowchart_rewrite.py  test_latex_utils.py  test_layout_contract.py  test_layout_policy.py  test_llm_qa.py  test_micro_repair.py  test_prompt_contract.py  test_replace_geometry.py
